# tauri-clipboard-plugin

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.rs  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.npm.json
docs/: API.md  PUBLISHING.md  TEST_SCENARIOS.md
examples/tauri-app/: README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/tauri-app/src/: App.vue  style.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: main.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: available_formats.toml  has_format.toml  read_buffer.toml  read_clipboard.toml  write_buffer.toml  write_image_bytes.toml  write_video_files.toml
permissions/schemas/: schema.json
scripts/: release.sh
src/: backend.rs  commands.rs  constants.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  service.rs  utils.rs
tests/: real_scenarios.rs
