[package]
name = "clipboard-pro-example"
version = "0.1.0"
description = "Tauri v2 example app for tauri-plugin-clipboard-pro"
authors = ["m3"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.10.2", features = [] }
tauri-plugin-clipboard-pro = { path = "../../.." }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
